--- a/comments.html
+++ b/comments.html
@@ -105,28 +105,47 @@
                                 </div>
                                 <div class="form__fields">
                                     <form class="form__elem" method="post">
-                                    <div class="form__row clearfix">
-                                        <label class="form__cell">
-                                        <div class="form__field-title">
-                                            Ваше имя
+                                            <div class="form__row clearfix">
+                                                <label class="form__cell">
+                                                    <div class="form__field-title">
+                                                        Ваше имя
+                                                    </div>
+                                                        <input type="text" value="" class="form__input-text" placeholder="Ввведите имя">
+                                                </label>
+                                                <label class="form__cell">
+                                                    <div class="form__field-title">
+                                                         Ссылка на профиль в VK
+                                                    </div>
+                                                        <input type="text" value="" class="form__input-text" placeholder="Вставьте ссылку">
+                                                </label>
+                                            </div>
                                         </div>
-                                        <input type="text" value="" class="form__input-text" placeholder="Ввведите имя">
-                                        </label>
-                                        <label class="form__cell">
-                                        <div class="form__field-title">
-                                            Ссылка на профиль в VK
-                                        </div>
-                                        <input type="text" value="" class="form__input-text" placeholder="Вставьте ссылку">
-                                        </label>
-                                    </div>
-                                    <div class="form__row">
+                                    <div class="form__row" "clearfix">
                                         <label class="form__textarea-label">
-                                        <div class="form__field-title">
-                                            Текст отзыва
-                                        </div>
-                                        <textarea class="form__textarea" placeholder="Введите сообщение"></textarea>
+                                            <div class="form__field-title">
+                                                Текст отзыва
+                                            </div>
+                                                <textarea class="form__textarea" placeholder="Введите сообщение"></textarea>
                                         </label>
                                     </div> 
+                                <div class="form__buttons">
+                                    <div class="form__controls">
+                                        <div class="form__controls-title">
+                                            Отображать фото в отзыве?
+                                        </div>
+                                        <div class="form__controls-buttons">
+                                            <label class="form__radio">
+                                                <input type="radio" name="review" id="" class="form__radio-elem">
+                                                <div class="form__radio-text">Да</div>
+                                            </label>    
+                                            <label class="form__radio">
+                                                <input type="radio" name="review" id="" class="form__radio-elem">
+                                                <div class="form__radio-text">Нет</div>
+                                            </label>    
+                                            
+                                        </div>
+                                    </div>
+                                </div>
                                  <!-- подвал-->
        <footer class="footer-comments">
             <div class="footer__text">
