--- a/comments.html
+++ b/comments.html
@@ -101,7 +101,7 @@
                         <img src="./img/comments/pagination/Vector Smart Object dark.png" class="page-switch-second__image">
                            <div class="form">
                                 <div class="form__title">
-                                    Оставить отзывы
+                                    Оставить отзыв
                                 </div>
                                 <div class="form__fields">
                                     <form class="form__elem" method="post">
