--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
                 <p>на курсе «HTML + CSS» в LoftSchool.</p>
                 <p>Автор работы: Прохладов Вадим</p>
             </div>
+                <div class="social-media__text">Наши социальные сети</div>
                 <img src="./img/footer/logo-fig color.png" alt="" class="footer-logo">
                     <div class="social-media">
                         <ul class="social-media__link">
