--- a/comments.html
+++ b/comments.html
@@ -133,19 +133,26 @@
                                         <div class="form__controls-title">
                                             Отображать фото в отзыве?
                                         </div>
-                                        <div class="form__controls-buttons">
-                                            <label class="form__radio">
-                                                <input type="radio" name="review" id="" class="form__radio-elem">
-                                                <div class="form__radio-text">Да</div>
-                                            </label>    
-                                            <label class="form__radio">
-                                                <input type="radio" name="review" id="" class="form__radio-elem">
-                                                <div class="form__radio-text">Нет</div>
-                                            </label>    
-                                            
+                                        <div class="form__controls-buttons" "clearfix">
+                                            <div class="form__controls-left">
+                                                <label class="form__radio">
+                                                    <input type="radio" name="review" class="form__radio-elem">
+                                                        <div class="form__radio-fake"></div>
+                                                            <div class="form__radio-text">Да</div>
+                                                </label>    
+                                                <label class="form__radio">
+                                                    <input type="radio" name="review" class="form__radio-elem">
+                                                        <div class="form__radio-fake"></div>
+                                                            <div class="form__radio-text">Нет</div>
+                                                     </label>    
+                                            </div>
+                                            <div class="form__controls-right">
+                                                <input type="sumbit" value="Отправить" class="form__submit">
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
+                           </div>   
                                  <!-- подвал-->
        <footer class="footer-comments">
             <div class="footer__text">
