--- a/comments.html
+++ b/comments.html
@@ -147,7 +147,7 @@
                                                      </label>    
                                             </div>
                                             <div class="form__controls-right">
-                                                <input type="sumbit" value="Отправить" class="form__submit">
+                                                <input type="submit" value="ОТПРАВИТЬ" class="form__submit">
                                             </div>
                                         </div>
                                     </div>
