--- a/comments.html
+++ b/comments.html
@@ -119,8 +119,8 @@
                                                         <input type="text" value="" class="form__input-text" placeholder="Вставьте ссылку">
                                                 </label>
                                             </div>
-                                        </div>
-                                    <div class="form__row" "clearfix">
+                                </div>
+                                    <div class="form__row clearfix">
                                         <label class="form__textarea-label">
                                             <div class="form__field-title">
                                                 Текст отзыва
@@ -133,7 +133,7 @@
                                         <div class="form__controls-title">
                                             Отображать фото в отзыве?
                                         </div>
-                                        <div class="form__controls-buttons" "clearfix">
+                                        <div class="form__controls-buttons clearfix">
                                             <div class="form__controls-left">
                                                 <label class="form__radio">
                                                     <input type="radio" name="review" class="form__radio-elem">
@@ -152,7 +152,7 @@
                                         </div>
                                     </div>
                                 </div>
-                           </div>   
+                           </div>
                                  <!-- подвал-->
        <footer class="footer-comments">
             <div class="footer__text">
