--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru-RU">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1100">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
@@ -10,124 +10,139 @@
     <title>Главная страница</title>
 </head>
 <body>
-    <div class="site">
+    <div class="wrapper">
                         <!---шапка-->
         <header class="header">
-            <img src="./img/logo-fig.png" alt="" class="logo">  
-                <div class="contacts">
-                    <a href=""+78000039210"" class="phone"> 8 (800) 00-392-10</a>
-                        <a href="#" class="contacts__schedule">График работы</a>           
+            <div class="container clearfix">
+                <div class="header__left">
+                    <a href="./index.html" class="logo__wrapper">
+                        <img src="./img/logo-fig.png" alt="" class="logo">
+                    </a>
+                    
+                </div>
+                <div class="header__right">
+                   <div class="contacts">
+                        <a href=""+78000039210"" class="phone"> 8 (800) 00-392-10</a>
+                            <a href="#" class="contacts__schedule">График работы</a>    
+                    </div> 
+                </div>  
+            </div>        
         </header>
+    </div>
                         <!-- боковое меню -->
+        <div class="container clearfix">
             <aside class="sidebar">
-                <nav class="menu">
-                    <ul class="nav-menu">
-                        <li class="nav-menu__item">
-                            <a href="./index.html" class="nav-menu__link">
-                                <div class="nav-menu__icon nav-menu__icon-main"></div>
-                                <div class="nav-menu__text">Главная</div>
-                            </a>     
-                        </li>
-                        <li class="nav-menu__item">
-                            <a href="./prices.html" class="nav-menu__link">
-                                <div class="nav-menu__icon nav-menu__icon-prices"></div>
-                                <div class="nav-menu__text">Тарифы</div>
-                            </a>     
-                        </li>
-                        <li class="nav-menu__item">
-                            <a href="./comments.html" class="nav-menu__link">
-                                <div class="nav-menu__icon nav-menu__icon-reviews"></div>
-                                <div class="nav-menu__text">Отзывы</div>
-                            </a>     
-                        </li>
-                    </ul>
-                </aside>
-                        <!-- страница-контента -->
-            <main class="main-content">
-                <div class="page-image">
-                    <img src="./img/workadium/table gradient.png" alt="" class="page-image__picture">
-                    <div class="page-image__text">О компании</div>
-                </div>
-                <div class="page text">
-                    <p>
-                      Чтобы работать в дружелюбной и уютной атмосфере, не обязательно снимать офис за баснословные суммы. Обратитесь в наш коворкинг «Воркадиум» и оцените преимущества сотрудничества. 
-                    </p>
-                    <h1>
-                        Что мы предлагаем:
-                    </h1>
-                    <ul>
-                        <li>
-                            Огромный конференц-зал на 120 человек для проведения массовых переговоров, праздников, совещаний.
-                        </li>
-                        <li>
-                            Средний конференц-зал на 40 человек.
-                        </li>
-                        <li>
-                            Уютный зал с круглым столом для совещаний на 12 человек
-                        </li>
-                        <li>
-                            Пространство для совместной работы. Несколько вариантов – от уютных небольших кабинетов с панорамными окнами и стильных офисов на несколько человек до творческих комнат в стиле лофт с высокими потолками, без привычных атрибутов офиса.
-                        </li>
-                        <li>
-                            Большая библиотека с классической и специальной литературой.
-                        </li>
-                        <li>
-                            Магазин канцелярии.
-                        </li>
-                        <li>
-                            Компьютерный зал.
-                        </li>
-                        <li>
-                            Зал для неформальных встреч с баром и кальяном.
-                        </li>
-                        <p>
-                            Возможность комфортно работать и с удобством организовывать бизнес встречи – это базовая потребность современного делового человека. В уютных залах «Воркадиум» есть все, что нужно для ведения дел – переговорные столы, тумбы и шкафы для хранения документов, компьютерная техника, а также уютный ресторан для дружеских встреч.
-                        </p>
-                        <div class="description">
-                        <div class="description__text"> Для наших новых клиентов мы предлагаем <span class="description__pink"> скидку 50% </span> на первый день! Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!</div>
-                        </div>
-                        <div class="partners">
-                            <div class="partners__title">Партнеры</div>
-                            <ul class="partners__list">
-                                <li class="partners__item">
-                                    <a  href="a" class="partners__link-winter">
-                                        <img src="./img/partners/winter.png" alt="" class="winter-logo__image">
-                                </li>
-                                <li class="partners__item">
-                                    <a class="partners__link-tishkin" href="a">
-                                        <img src="./img/partners/tishkin.png" alt="" class="tishkin-logo__image">
-                                </li>
-                                <li class="partners__item">
-                                    <a class="partners__link-drop" href="a">
-                                        <img src="./img/partners/drop.png" alt="" class="drop-logo__image">
-                                </li>
-                                <li class="partners__item">
-                                    <a class="partners__link-pufok" href="a">
-                                        <img src="./img/partners/pufok.png" alt="" class="pufok-logo__image">
-                                </li>
-                                <li class="partners__item">
-                                    <a class="partners__link-Ann" href="a">
-                                        <img src="./img/partners/Ann.png" alt="" class="Ann-logo__image">
-                                </li>
-                                <li class="partners__item">
-                                    <a class="partners__link-Avalanche" href="a">
-                                        <img src="./img/partners/Avalanche.png" alt="" class="avalanche-logo__image">
-                                </li>
-                            </ul>
-                        </div>
-                    </div>  
-                </div>
-            </main>
-        </section>    
+                            <nav class="menu">
+                                <ul class="nav-menu">
+                                    <li class="nav-menu__item active">
+                                        <a href="./index.html" class="nav-menu__link">
+                                            <div class="nav-menu__icon nav-menu__icon-main"></div>
+                                            <div class="nav-menu__text">Главная</div>
+                                        </a>     
+                                    </li>
+                                    <li class="nav-menu__item">
+                                        <a href="./prices.html" class="nav-menu__link">
+                                            <div class="nav-menu__icon nav-menu__icon-prices"></div>
+                                            <div class="nav-menu__text">Тарифы</div>
+                                        </a>     
+                                    </li>
+                                    <li class="nav-menu__item">
+                                        <a href="./comments.html" class="nav-menu__link">
+                                            <div class="nav-menu__icon nav-menu__icon-reviews"></div>
+                                            <div class="nav-menu__text">Отзывы</div>
+                                        </a>     
+                                    </li>
+                                </ul>
+                            </aside>
+                                    <!-- страница-контента -->
+                        <main class="main-content">
+                            <div class="page-image">
+                                <img src="./img/workadium/table gradient.png" alt="" class="page-image__picture">
+                                <div class="page-image__text">О компании</div>
+                            </div>
+                            <div class="page__text">
+                                <p>
+                                    Чтобы работать в дружелюбной и уютной атмосфере, не обязательно снимать офис за баснословные суммы. Обратитесь в наш коворкинг «Воркадиум» и оцените преимущества сотрудничества. 
+                                </p>
+                                <h1>
+                                    Что мы предлагаем:
+                                </h1>
+                                <ul>
+                                    <li>
+                                        Огромный конференц-зал на 120 человек для проведения массовых переговоров, праздников, совещаний.
+                                    </li>
+                                    <li>
+                                        Средний конференц-зал на 40 человек.
+                                    </li>
+                                    <li>
+                                        Уютный зал с круглым столом для совещаний на 12 человек
+                                    </li>
+                                    <li>
+                                        Пространство для совместной работы. Несколько вариантов – от уютных небольших кабинетов с панорамными окнами и стильных офисов на несколько человек до творческих комнат в стиле лофт с высокими потолками, без привычных атрибутов офиса.
+                                    </li>
+                                    <li>
+                                        Большая библиотека с классической и специальной литературой.
+                                    </li>
+                                    <li>
+                                        Магазин канцелярии.
+                                    </li>
+                                    <li>
+                                        Компьютерный зал.
+                                    </li>
+                                    <li>
+                                        Зал для неформальных встреч с баром и кальяном.
+                                    </li>
+                                    <p>
+                                        Возможность комфортно работать и с удобством организовывать бизнес встречи – это базовая потребность современного делового человека. В уютных залах «Воркадиум» есть все, что нужно для ведения дел – переговорные столы, тумбы и шкафы для хранения документов, компьютерная техника, а также уютный ресторан для дружеских встреч.
+                                    </p>
+                                    <div class="description">
+                                        <div class="description__text"> Для наших новых клиентов мы предлагаем <span class="description__pink"> скидку 50% </span> на первый день! Приходите, чтобы лично оценить преимущества коворкинга «Воркадиум»!</div>
+                                    </div>
+                                </ul>
+                            </div>
+                                    <div class="partners">
+                                        <div class="partners__title">Партнеры</div>
+                                        <ul class="partners__list">
+                                            <li class="partners__item">
+                                                <a  href="a" class="partners__link-winter">
+                                                    <img src="./img/partners/winter.png" alt="" class="winter-logo__image">
+                                            </li>
+                                            <li class="partners__item">
+                                                <a class="partners__link-tishkin" href="a">
+                                                    <img src="./img/partners/tishkin.png" alt="" class="tishkin-logo__image">
+                                            </li>
+                                            <li class="partners__item">
+                                                <a class="partners__link-drop" href="a">
+                                                    <img src="./img/partners/drop.png" alt="" class="drop-logo__image">
+                                            </li>
+                                            <li class="partners__item">
+                                                <a class="partners__link-pufok" href="a">
+                                                    <img src="./img/partners/pufok.png" alt="" class="pufok-logo__image">
+                                            </li>
+                                            <li class="partners__item">
+                                                <a class="partners__link-Ann" href="a">
+                                                    <img src="./img/partners/Ann.png" alt="" class="Ann-logo__image">
+                                            </li>
+                                            <li class="partners__item">
+                                                <a class="partners__link-Avalanche" href="a">
+                                                    <img src="./img/partners/Avalanche.png" alt="" class="avalanche-logo__image">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>  
+                            </div>
+                        </main>
+        </div>
+            
                                         <!-- подвал-->
         <footer class="footer">
-            <div class="footer__text">
-                <p>Сделано с любовью и старанием </p>
-                <p>на курсе «HTML + CSS» в LoftSchool.</p>
-                <p>Автор работы: Прохладов Вадим</p>
-            </div>
+            <ul class="footer__text">
+                <li>Сделано с любовью и старанием </li>
+                <li>на курсе «HTML + CSS» в LoftSchool.</li>
+                <li>Автор работы: Прохладов Вадим</li>
+            </ul>
                 <div class="social-media__text">Наши социальные сети</div>
-                <img src="./img/footer/logo-fig color.png" alt="" class="footer-logo">
+                    <img src="./img/footer/logo-fig color.png" alt="" class="footer-logo">
                     <div class="social-media">
                         <ul class="social-media__link">
                             <li class="social-media-VK">
