--- a/index.html
+++ b/index.html
@@ -109,36 +109,36 @@
                                 </ul>
                             </div>
                                     <div class="partners">
-                                        <div class="partners__title">Партнеры</div>
+                                        <div class="section-title">Партнеры</div>
                                         <ul class="partners__list clearfix">
                                             <li class="partners__item">
                                                 <a  href="a" class="partners__link">
-                                                    <img src="./img/partners/winter.png" alt="" class="partners__image">
+                                                    <img src="./img/partners/winter.png" alt="" class="partners__image partners__image-winter">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item_middle">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/tishkin.png" alt="" class="partners__image">
+                                                    <img src="./img/partners/tishkin.png" alt="" class="partners__image partners__image-tishkin">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item-right">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/drop.png" alt="" class="partners__image">
+                                                    <img src="./img/partners/drop.png" alt="" class="partners__image partners__image-drop">
                                                 </a>
                                             </li>
                                             <li class="partners__item">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/pufok.png" alt="" class="partners__image">
+                                                    <img src="./img/partners/pufok.png" alt="" class="partners__image partners__image-pufok">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item_middle">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/Ann.png" alt="" class="partners__image">
+                                                    <img src="./img/partners/Ann.png" alt="" class="partners__image partners__image-Ann">
                                                 </a>
                                             </li>
                                             <li class="partners__item partners__item_middle">
                                                 <a class="partners__link" href="a">
-                                                    <img src="./img/partners/Avalanche.png" alt="" class="partners__image">
+                                                    <img src="./img/partners/Avalanche.png" alt="" class="partners__image partners__image-Avalanche">
                                                 </a>
                                             </li>
                                         </ul>
