--- a/prices.html
+++ b/prices.html
@@ -10,21 +10,32 @@
 <body>
                 <!---шапка-->
                 <div class="wrapper">
-                    <header class="header">
-                        <div class="container clearfix">
-                            <div class="header__left">
-                                <a href="./index.html" class="logo__wrapper">
-                                    <img src="./img/logo-fig.png" alt="" class="logo">
-                                </a>
-                            </div>
-                            <div class="header__right">
-                                <div class="contacts">
-                                    <a href=""+78000039210"" class="phone"> 8 (800) 00-392-10</a>
-                                        <a href="#" class="contacts__schedule">График работы</a>    
-                                </div> 
-                            </div>  
-                        </div>        
-                    </header>
+                     <header class="header">
+                <div class="container clearfix">
+                    <div class="header__left">
+                        <a href="./index.html" class="logo__wrapper">
+                            <img src="./img/logo-fig.png" alt="" class="logo">
+                        </a>
+                    </div>
+                    <div class="header__right">
+                        <div class="contacts">
+                            <a href=""+78000039210"" class="phone"> 8 (800) 00-392-10</a>
+                                <div class="contacts__elem">
+                                   <a href="#" class="contacts__schedule">График работы</a>
+                                    <div class="contacts__dropdown">
+                                        <div class="contacts__time">
+                                            пн-вс: 09:00 - 20:00
+                                        </div>
+                                        <div class="contacts__lunch">
+                                            обед:14:00-14:30
+                                        </div>
+                                    </div>     
+                                </div>
+                                
+                        </div> 
+                    </div>  
+                </div>        
+        </header> 
                 </div>
                   <!-- боковое меню -->
             <div class="container clearfix">
@@ -52,53 +63,57 @@
                                     </ul>
                             </aside>
                             <!-- страница-контента -->
-                        <main class="main-content">
+                        <main class="main-content main-content-padding_top">
+                            <ul class="breadcrumbs">
+                                <li class="breadcrumbs__item">
+                                    <a href="" class="breadcrumbs__link">Главная</a>
+                                </li>
+                                <li class="breadcrumbs__item breadcrumbs__item_active">
+                                    <a href="" class="breadcrumbs__link">Тарифы</a>
+                                </li>
+                            </ul>
                             <div class="page-name">
-                                <i class="page-name__text"><span>Главная</span>/Тарифы</i>
-                                <h1>Тарифы</h1>
-                                <div class="one">
-                                    <img src="./img/prices/tariff 1.png" alt="" class="first-tarif__img">
-                                        <div class="first-tarif-img__text">Один</div>
-                                            <h2>800 руб/мес или 100 руб/сутки</h2>
-                                                <p>Оплачивается рабочее место на 1 человека. Есть возможность оплаты с привязкой к определенному физическому месту. При оплате за год, скидка 30%.</p>
-                                </div>  
-                                <div class="three">
-                                    <img src="./img/prices/tariff 2.png" alt="" class="second-tarif__img">
-                                        <div class="second-tarif-img__text">Трое</div>
-                                            <h3>500 руб/мес или 200 руб/сутки</h3>
-                                                <p>Оплачивается стол на 3 рабочих места. При этом можно ими пользоваться как одновременно, так и поочередно. Можно пользоваться офисной техникой и выделенным шкафом для документов.</p>
-                                </div>
-                                <div class="ten-ten">
-                                    <img src="./img/prices/tariff 3.png" alt="" class="third-tarif__img">
-                                        <div class="third-tarif-img__text">10-10</div>
-                                            <h4>10 000 руб/мес</h4>
-                                                <p>Оплачивается 10 рабочих мест на любые 10 дней месяца. Отлично подходит для периодической работы команды сотрудников без строгой привязки к рабочему месту. При оплате на год вперед скидка 25%</p>
-                                </div> 
-                                <div class="Unlimited for one">
-                                    <img src="./img/prices/tariff 4.png" alt="" class="fourth-tarif__img">
-                                        <div class="fourth-tarif-img__text">
-                                            <span class="Vip-fourth__pink"> VIP </span> Безлимит на одного
+                                <div class="section-title">Тарифы</div>
+                                <ul class="services">
+                                    <li class="services__item">
+                                        <div class="first-tarif">
+                                            <img src="./img/prices/tariff 1.png" class="first-tarif__img">
+                                            <div class="first-tarif__text">
                                             </div>
-                                                <h5>2 500 руб/мес</h5>
-                                                    <p>В стоимость включена не только оплата рабочего места, но и пользование копировальной техникой, бесплатный кофе или чай в течение дня, возможность использования зала для переговоров при предварительном бронировании 1 раз в месяц.</p>
-                                </div>        
-                                <div class="all inclusive">
-                                    <img src="./img/prices/tariff 5.png" alt="" class="fifth-tarif__img">
-                                        <div class="fifth-tarif-img__text">
-                                        <span class="Vip-fifth__pink"> VIP </span> Все включено
-                                                <h6>Цена рассчитывается индивидуально</h6>
-                                                    <p>Оплачивается необходимое число рабочих мест с привязкой к фактическому местонахождению. В стоимость включены рабочие столы, мебель для хранения документов, отдельный принтер и копировальный автомат.</p>
-                                        </div>      
-                                </div>
-                                <div class="conversation">
-                                    <img src="./img/prices/tariff 6.png" alt="" class="sixth-tarif__img">
-                                        <div class="sixth-tarif-img__text">Переговоры</div>
-                                            <h7>900 руб/час</h7>
-                                                <p>Есть возможность раннего бронирования конференц-залов со скидкой до 30% при полной предоплате.</p>
-                                </div>
+                                        </div>
+                                        <div class="second-tarif">
+                                            <img src="./img/prices/tariff 2.png" class="second-tarif__img">
+                                        </div>
+                                        <div class="third-tarif">
+                                            <img src="./img/prices/tariff 3.png" class="third-tarif__img">
+                                                <div class="tarif__text">
+                                                    <div class="tarif-desk">10-10</div>
+                                                </div>
+                                        </div>
+                                        <div class="fourth-tarif">
+                                            <img src="./img/prices/tariff 4.png" class="fourth-tarif__img">
+                                                <div class="tarif__text">
+                                                    <div class="text-VIP">VIP</div>
+                                                    <div class="tarif-desk">«Безлимит на одного»</div>
+                                                </div>
+                                        </div>
+                                            <div class="tarif__title">
+                                                2 500 руб/мес
+                                            </div>
+                                            <div class="tarif__info">
+                                                В стоимость включена не только оплата рабочего места, но и пользование копировальной техникой, бесплатный кофе или чай в течение дня, возможность использования зала для переговоров при предварительном бронировании 1 раз в месяц.
+                                            </div>
+                                        <div class="fifth-tarif">
+                                            <img src="./img/prices/tariff 5.png" class="fifth-tarif__img">
+                                        </div>
+                                        <div class="sixth-tarif">
+                                            <img src="./img/prices/tariff 6.png" class="sixth-tarif__img">
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                             </div>
                         </main>
-            </div>
                        <!-- подвал-->
         <footer class="footer">
             <div class="container">
