--- a/prices.html
+++ b/prices.html
@@ -177,30 +177,34 @@
                         <div class="social-media">
                             <ul class="social-media__link">
                                 <li class="social-media-VK">
-                                    <a class="vk__link" href="a">
-                                        <div class="vk-logo__icon"></div>
-                                    </a>
+                                        <div class="vk-logo__icon">
+                                           <a class="vk__link" href="a"></a> 
+                                        </div>
                                 </li>
                                 <li class="social-media-fb">
-                                    <a class="fb__link" href="a">
-                                        <div class="fb-logo__icon"></div>
+                                        <div class="fb-logo__icon">
+                                           <a class="fb__link" href="a"> </a>
+                                        </div>
                                 </li>
                                 <li class="social-media-google">
-                                    <a class="google__link" href="a">
-                                        <div class="google-logo__icon"></div>
+                                        <div class="google-logo__icon">
+                                            <a class="google__link" href="a"></a>
+                                        </div>
                                 </li>
                                 <li class="social-media-twitter">
-                                    <a class="twitter__link" href="a">
-                                        <div class="twitter-logo__icon"></div>
+                                        <div class="twitter-logo__icon">
+                                            <a class="twitter__link" href="a"></a>
+                                        </div>
                                 </li>
                                 <li class="social-media-mail">
-                                    <a class="mail__link" href="a">
-                                        <div class="mail-logo__icon"></div>
+                                        <div class="mail-logo__icon">
+                                            <a class="mail__link" href="a"></a>
+                                        </div>
                                 </li>
                             </ul>       
                         </div> 
                 </div>
-                 
+            </div>
             </div>
             
         </footer>
