--- a/prices.html
+++ b/prices.html
@@ -161,45 +161,35 @@
                         </main>
                        <!-- подвал-->
         <footer class="footer">
-            <div class="container">
+            <div class="container clearfix">
                <div class="footer__col">
             <ul class="footer__text">
                 <li>Сделано с любовью и старанием </li>
-                <li>на курсе «HTML + CSS» в LoftSchool.</li>
-                <li>Автор работы: Прохладов Вадим</li>
+                <li>на курсе «HTML + CSS» в <a href="#" class="footer__desc-link">LoftSchool</a>.</li>
+                <li>Автор работы: <b>Сырцов Алексей</b></li>
             </ul>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col-middle">
                 <img src="./img/footer/logo-fig color.png" alt="" class="footer-logo">
             </div>
-                <div class="footer__col">
+                <div class="footer__col footer__col-right">
                    <div class="social-media__text">Наши социальные сети</div>
                         <div class="social-media">
                             <ul class="social-media__link">
                                 <li class="social-media-VK">
-                                        <div class="vk-logo__icon">
-                                           <a class="vk__link" href="a"></a> 
-                                        </div>
+                                    <a class="vk__link" href="a"></a> 
                                 </li>
                                 <li class="social-media-fb">
-                                        <div class="fb-logo__icon">
-                                           <a class="fb__link" href="a"> </a>
-                                        </div>
+                                    <a class="fb__link" href="a"> </a>
                                 </li>
                                 <li class="social-media-google">
-                                        <div class="google-logo__icon">
-                                            <a class="google__link" href="a"></a>
-                                        </div>
+                                    <a class="google__link" href="a"></a>
                                 </li>
                                 <li class="social-media-twitter">
-                                        <div class="twitter-logo__icon">
-                                            <a class="twitter__link" href="a"></a>
-                                        </div>
+                                    <a class="twitter__link" href="a"></a>
                                 </li>
                                 <li class="social-media-mail">
-                                        <div class="mail-logo__icon">
-                                            <a class="mail__link" href="a"></a>
-                                        </div>
+                                    <a class="mail__link" href="a"></a>
                                 </li>
                             </ul>       
                         </div> 
