--- a/prices.html
+++ b/prices.html
@@ -88,6 +88,8 @@
                                             <div class="tarif__info">
                                                 Оплачивается рабочее место на 1 человека. Есть возможность оплаты с привязкой к определенному физическому месту. При оплате за год, скидка 30%.
                                             </div>
+                                    </li>
+                                    <li class="services__item">
                                         <div class="second-tarif">
                                             <img src="./img/prices/tariff 2.png" class="second-tarif__img">
                                                 <div class="tarif__text">
@@ -100,6 +102,8 @@
                                             <div class="tarif__info">
                                                 Оплачивается стол на 3 рабочих места. При этом можно ими пользоваться как одновременно, так и поочередно. Можно пользоваться офисной техникой и выделенным шкафом для документов.
                                             </div>
+                                    </li>
+                                    <li class="services__item">
                                         <div class="third-tarif">
                                             <img src="./img/prices/tariff 3.png" class="third-tarif__img">
                                                 <div class="tarif__text">
@@ -112,6 +116,8 @@
                                             <div class="tarif__info">
                                                 Оплачивается 10 рабочих мест на любые 10 дней месяца. Отлично подходит для периодической работы команды сотрудников без строгой привязки к рабочему месту. При оплате на год вперед скидка 25%
                                             </div>
+                                    </li>
+                                    <li class="services__item">
                                         <div class="fourth-tarif">
                                             <img src="./img/prices/tariff 4.png" class="fourth-tarif__img">
                                                 <div class="tarif__text">
@@ -125,6 +131,8 @@
                                             <div class="tarif__info">
                                                 В стоимость включена не только оплата рабочего места, но и пользование копировальной техникой, бесплатный кофе или чай в течение дня, возможность использования зала для переговоров при предварительном бронировании 1 раз в месяц.
                                             </div>
+                                    </li>
+                                    <li class="services__item">
                                         <div class="fifth-tarif">
                                             <img src="./img/prices/tariff 5.png" class="fifth-tarif__img">
                                                 <div class="tarif__text">
@@ -138,6 +146,8 @@
                                             <div class="tarif__info">
                                                 Оплачивается необходимое число рабочих мест с привязкой к фактическому местонахождению. В стоимость включены рабочие столы, мебель для хранения документов, отдельный принтер и копировальный автомат. 
                                             </div>
+                                    </li>
+                                    <li class="services__item">
                                         <div class="sixth-tarif">
                                             <img src="./img/prices/tariff 6.png" class="sixth-tarif__img">
                                                 <div class="tarif__text">
@@ -150,9 +160,7 @@
                                             <div class="tarif__info">
                                                 Есть возможность раннего бронирования конференц-залов со скидкой до 30% при полной предоплате.
                                             </div>
-
-
-
+                                    </li>
                                         </div>
                                     </li>
                                 </ul>
