--- a/index.html
+++ b/index.html
@@ -149,47 +149,43 @@
                     </div>
             
                                         <!-- подвал-->
-        <footer class="footer">
-            <div class="container">
+       <footer class="footer">
+            <div class="container clearfix">
                <div class="footer__col">
-                <ul class="footer__text">
+            <ul class="footer__text">
                 <li>Сделано с любовью и старанием </li>
-                <li>на курсе «HTML + CSS» в LoftSchool.</li>
-                <li>Автор работы: Прохладов Вадим</li>
+                <li>на курсе «HTML + CSS» в <a href="#" class="footer__desc-link">LoftSchool</a>.</li>
+                <li>Автор работы: <b>Сырцов Алексей</b></li>
             </ul>
             </div>
-            <div class="footer__col">
+            <div class="footer__col footer__col-middle">
                 <img src="./img/footer/logo-fig color.png" alt="" class="footer-logo">
             </div>
-                <div class="footer__col">
+                <div class="footer__col footer__col-right">
                    <div class="social-media__text">Наши социальные сети</div>
                         <div class="social-media">
                             <ul class="social-media__link">
                                 <li class="social-media-VK">
-                                    <a class="vk__link" href="a">
-                                        <div class="vk-logo__icon"></div>
-                                    </a>
+                                    <a class="vk__link" href="a"></a> 
                                 </li>
                                 <li class="social-media-fb">
-                                    <a class="fb__link" href="a">
-                                        <div class="fb-logo__icon"></div>
+                                    <a class="fb__link" href="a"> </a>
                                 </li>
                                 <li class="social-media-google">
-                                    <a class="google__link" href="a">
-                                        <div class="google-logo__icon"></div>
+                                    <a class="google__link" href="a"></a>
                                 </li>
                                 <li class="social-media-twitter">
-                                    <a class="twitter__link" href="a">
-                                        <div class="twitter-logo__icon"></div>
+                                    <a class="twitter__link" href="a"></a>
                                 </li>
                                 <li class="social-media-mail">
-                                    <a class="mail__link" href="a">
-                                        <div class="mail-logo__icon"></div>
+                                    <a class="mail__link" href="a"></a>
                                 </li>
                             </ul>       
                         </div> 
                 </div>
             </div>
+            </div>
+            
         </footer>
 </body>
 </html>
