--- a/comments.html
+++ b/comments.html
@@ -86,8 +86,7 @@
                                         <p>Я фрилансер, программист, работать дома не могу, так как мешают дети. Здесь нашел то, что давно искал – тишину и спокойствие. Эффективность работы выросла, как и гонорары. Очень удобно, что коворкинг находится недалеко от метро. Стабильный интернет, чистота и порядок вокруг, никто не мешает. Цены сначала показались высокими, но учитывая полученные преимущества, все отлично!</p2>
                         </div>
                         <div class="third-comment">
-                            <img src="./img/comments/third comment.png" alt="" class="third-comment-__img">
-                                <img src="./img/comments/Ellipse 1.jpg" alt="" class="third-comment-elipse__img">
+                            <div class="third-comment__img"></div>
                                 <p class="data">22.12.2015</p1>
                                     <h2 class="name">Елена Сурагай</h2>
                                         <p>Захожу сюда не часто, так как не мой район, но когда бываю в центре, то периодически нужно место для плодотворной работы. Интернет-клубы не подходят, так как не обеспечивают такой уровень сервиса, как Воркадиум. Здесь я нахожу вдохновение и могу выделить время для творчества. Желаю Воркадиуму процветания и развития. Если будете открывать филиалы, обратите внимание на Алексеевский район, я буду вашим постоянным клиентом :)</p2>
