--- a/prices.html
+++ b/prices.html
@@ -74,7 +74,7 @@
                             </ul>
                             <div class="page-name">
                                 <div class="section-title">Тарифы</div>
-                                <ul class="services cleadfix">
+                                <ul class="services">
                                     <li class="services__item">
                                         <div class="first-tarif">
                                             <img src="./img/prices/tariff 1.png" class="first-tarif__img">
