--- a/comments.html
+++ b/comments.html
@@ -72,33 +72,45 @@
                                     <a href="" class="breadcrumbs__link">Отзывы</a>
                                 </li>
                             </ul>
-                    <div class="section-title">Отзывы</div>
-                        <div class="first-comment">
-                            <img src="./img/comments/first comment.jpg" alt="" class="first-comment__img">
-                                <p class="data">12.10.2016</p1>
-                                    <h2 class="name">Олег Павлов</h2>
-                                        <p>Пользуемся услугами коворкинга стабильно раз в неделю, когда проводим совещания директоров. Получается намного дешевле и удобно всем добираться. Единственное пожелание – расширить меню, потому что бизнес-ланчи – это все таки средний уровень, а хочется чего то более вкусного, чтобы можно было угощать начальство.</p2 >
-                        </div>
-                        <div class="second-comment">
-                            <img src="./img/comments/second comment.jpg" alt="" class="second-comment__img">
-                                <p class="data">01.02.2016</p1>
-                                    <h2 class="name">Эрнест Изиль</h2>
-                                        <p>Я фрилансер, программист, работать дома не могу, так как мешают дети. Здесь нашел то, что давно искал – тишину и спокойствие. Эффективность работы выросла, как и гонорары. Очень удобно, что коворкинг находится недалеко от метро. Стабильный интернет, чистота и порядок вокруг, никто не мешает. Цены сначала показались высокими, но учитывая полученные преимущества, все отлично!</p2>
-                        </div>
-                        <div class="third-comment">
-                            <div class="third-comment__img"></div>
-                                <p class="data">22.12.2015</p1>
-                                    <h2 class="name">Елена Сурагай</h2>
-                                        <p>Захожу сюда не часто, так как не мой район, но когда бываю в центре, то периодически нужно место для плодотворной работы. Интернет-клубы не подходят, так как не обеспечивают такой уровень сервиса, как Воркадиум. Здесь я нахожу вдохновение и могу выделить время для творчества. Желаю Воркадиуму процветания и развития. Если будете открывать филиалы, обратите внимание на Алексеевский район, я буду вашим постоянным клиентом :)</p2>
-                        </div>
-                        <div class="fourth-comment">
-                            <img src="./img/comments/fourth comment.jpg" alt="" class="fourth-comment__img">
-                                <p class="data">14.08.2015</p>
-                                    <h2 class="name">Наталья Осадчая</h2>
-                                        <p>Провожу здесь встречи с клиентами в неформальной обстановке. Удобно, что при необходимости все под рукой – и ксерокс, и принтер и магазин канцелярии. Заключаю здесь свои лучшие договора. Единственное пожелание – сделайте еще несколько переговорных комнат на 10-15 человек, а то они пользуются большим спросом и не всегда есть возможность забронировать.</p1>
-                        </div>
-                        <p class="page"> Cтраница 1 из 7 </p>
-                        <img src="./img/comments/pagination/Vector Smart Object.png" class="page-switch-first__image">
+                    <div class="section-title section-title-comments">Отзывы</div>
+                    <div class="comments">
+                            <div class="first-comment">
+                                <img src="./img/comments/first comment.jpg" alt="" class="first-comment__img">
+                                <div class="comment-text">
+                                    <p class="data">12.10.2016</p1>
+                                        <h2 class="name">Олег Павлов</h2>
+                                            <p class="reviews-text">Пользуемся услугами коворкинга стабильно раз в неделю, когда проводим совещания директоров. Получается намного дешевле и удобно всем добираться. Единственное пожелание – расширить меню, потому что бизнес-ланчи – это все таки средний уровень, а хочется чего то более вкусного, чтобы можно было угощать начальство.</p>
+                                </div>
+                            </div>
+                            <div class="second-comment">
+                                <img src="./img/comments/second comment.jpg" class="second-comment__img">
+                                <div class="comment-text">
+                                    <p class="data">01.02.2016</p1>
+                                        <h2 class="name">Эрнест Изиль</h2>
+                                            <p>Я фрилансер, программист, работать дома не могу, так как мешают дети. Здесь нашел то, что давно искал – тишину и спокойствие. Эффективность работы выросла, как и гонорары. Очень удобно, что коворкинг находится недалеко от метро. Стабильный интернет, чистота и порядок вокруг, никто не мешает. Цены сначала показались высокими, но учитывая полученные преимущества, все отлично!</p>
+                                </div>
+                            </div>
+                            <div class="third-comment">
+                                    <img src="img/comments/third comment.png" class="third-comment__img">
+                                    <div class="comment-text">
+                                      <p class="data">22.12.2015</p1>
+                                        <h2 class="name">Елена Сурагай</h2>
+                                            <p>Захожу сюда не часто, так как не мой район, но когда бываю в центре, то периодически нужно место для плодотворной работы. Интернет-клубы не подходят, так как не обеспечивают такой уровень сервиса, как Воркадиум. Здесь я нахожу вдохновение и могу выделить время для творчества. Желаю Воркадиуму процветания и развития. Если будете открывать филиалы, обратите внимание на Алексеевский район, я буду вашим постоянным клиентом :)</p>  
+                                    </div>     
+                            </div>
+                            <div class="fourth-comment">
+                                <img src="./img/comments/fourth comment.jpg" alt="" class="fourth-comment__img">
+                                <div class="comment-text">
+                                    <p class="data">14.08.2015</p>
+                                        <h2 class="name">Наталья Осадчая</h2>
+                                            <p>Провожу здесь встречи с клиентами в неформальной обстановке. Удобно, что при необходимости все под рукой – и ксерокс, и принтер и магазин канцелярии. Заключаю здесь свои лучшие договора. Единственное пожелание – сделайте еще несколько переговорных комнат на 10-15 человек, а то они пользуются большим спросом и не всегда есть возможность забронировать.</p>
+                                </div>
+                            </div>
+                    </div>
+                        
+                        <div class="pagination">
+                            <p class="page"> Cтраница 1 из 7 </p>
+                                <img src="./img/comments/pagination/Vector Smart Object.png" class="page-switch-first__image">
                         <ul class="page-number">
                             <li class="first-page">
                                 <div class="first-page__text">1</div>
@@ -123,6 +135,7 @@
                             </li>
                         </ul>
                         <img src="./img/comments/pagination/Vector Smart Object dark.png" class="page-switch-second__image">
+                        </div>
                            <div class="form">
                                 <div class="form__title">
                                     Оставить отзыв
