--- a/comments.html
+++ b/comments.html
@@ -63,10 +63,10 @@
                                 </ul>
                             </aside>
                 <!-- контент страницы -->
-                <main class="main-content">
+                <main class="main-content main-content-padding_top">
                     <ul class="breadcrumbs">
                                 <li class="breadcrumbs__item">
-                                    <a href="" class="breadcrumbs__link">Главная</a>
+                                    <a href="./index.html" class="breadcrumbs__link">Главная</a>
                                 </li>
                                 <li class="breadcrumbs__item breadcrumbs__item_active">
                                     <a href="" class="breadcrumbs__link">Отзывы</a>
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="third-comment">
-                                    <img src="img/comments/third comment.png" class="third-comment__img">
+                                    <div class="third-comment__img"></div>
                                     <div class="comment-text">
                                       <p class="data">22.12.2015</p1>
                                         <h2 class="name">Елена Сурагай</h2>
@@ -111,28 +111,28 @@
                         <div class="pagination">
                             <p class="page"> Cтраница 1 из 7 </p>
                                 <img src="./img/comments/pagination/Vector Smart Object.png" class="page-switch-first__image">
-                        <ul class="page-number">
-                            <li class="first-page">
-                                <div class="first-page__text">1</div>
-                            </li>
-                            <li class="second-page">
-                                <div class="second-page__text">2</div>
-                            </li>
-                            <li class="third-page">
-                                <div class="third-page__text">3</div>
-                            </li>
-                            <li class="fourth-page">
-                                <div class="fourth-page__text">4</div>
-                            </li>
-                            <li class="fifth-page">
-                                <div class="fifth-page__text">5</div>
-                            </li>
-                            <li class="sixth-page">
-                                <div class="sixth-page__text">6</div>
-                            </li>
-                            <li class="seventh-page">
-                                <div class="seventh-page__text">7</div>
-                            </li>
+                            <ul class="page-number">
+                                <li class="first-page">
+                                    <div class="first-page__text">1</div>
+                                </li>
+                                <li class="second-page">
+                                    <div class="second-page__text">2</div>
+                                </li>
+                                <li class="third-page">
+                                    <div class="third-page__text">3</div>
+                                </li>
+                                <li class="fourth-page">
+                                    <div class="fourth-page__text">4</div>
+                                </li>
+                                <li class="fifth-page">
+                                    <div class="fifth-page__text">5</div>
+                                </li>
+                                <li class="sixth-page">
+                                    <div class="sixth-page__text">6</div>
+                                </li>
+                                <li class="seventh-page">
+                                    <div class="seventh-page__text">7</div>
+                                </li>
                         </ul>
                         <img src="./img/comments/pagination/Vector Smart Object dark.png" class="page-switch-second__image">
                         </div>
