--- a/prices.html
+++ b/prices.html
@@ -66,7 +66,7 @@
                         <main class="main-content main-content-padding_top">
                             <ul class="breadcrumbs">
                                 <li class="breadcrumbs__item">
-                                    <a href="" class="breadcrumbs__link">Главная</a>
+                                    <a href="./index.html" class="breadcrumbs__link">Главная</a>
                                 </li>
                                 <li class="breadcrumbs__item breadcrumbs__item_active">
                                     <a href="" class="breadcrumbs__link">Тарифы</a>
