--- a/comments.html
+++ b/comments.html
@@ -113,7 +113,7 @@
                                 <img src="./img/comments/pagination/Vector Smart Object.png" class="page-switch-first__image">
                             <ul class="page-number">
                                 <li class="first-page">
-                                    <div class="first-page__text">1</div>
+                                    <a class="first-page__text">1</a>
                                 </li>
                                 <li class="second-page">
                                     <div class="second-page__text">2</div>
@@ -147,13 +147,13 @@
                                                     <div class="form__field-title">
                                                         Ваше имя
                                                     </div>
-                                                        <input type="text" value="" class="form__input-text" placeholder="Ввведите имя">
+                                                        <input type="text" value="" class="form__input-text" placeholder="Андрей">
                                                 </label>
                                                 <label class="form__cell">
                                                     <div class="form__field-title">
                                                          Ссылка на профиль в VK
                                                     </div>
-                                                        <input type="text" value="" class="form__input-text" placeholder="Вставьте ссылку">
+                                                        <input type="text" value="" class="form__input-text" placeholder="vk.com/example">
                                                 </label>
                                             </div>
                                 </div>
