--- a/comments.html
+++ b/comments.html
@@ -13,7 +13,7 @@
                      <header class="header">
                 <div class="container clearfix">
                     <div class="header__left">
-                        <a href="./index.html" class="logo__wrapper">
+                        <a href="./workadium.html" class="logo__wrapper">
                             <img src="./img/logo-fig.png" alt="" class="logo">
                         </a>
                     </div>
@@ -43,7 +43,7 @@
                             <nav class="menu">
                                 <ul class="nav-menu">
                                     <li class="nav-menu__item">
-                                        <a href="./index.html" class="nav-menu__link">
+                                        <a href="./workadium.html" class="nav-menu__link">
                                             <div class="nav-menu__icon nav-menu__icon-main"></div>
                                             <div class="nav-menu__text">Главная</div>
                                         </a>     
@@ -66,7 +66,7 @@
                 <main class="main-content main-content-padding_top">
                     <ul class="breadcrumbs">
                                 <li class="breadcrumbs__item">
-                                    <a href="./index.html" class="breadcrumbs__link">Главная</a>
+                                    <a href="./workadium.html" class="breadcrumbs__link">Главная</a>
                                 </li>
                                 <li class="breadcrumbs__item breadcrumbs__item_active">
                                     <a href="" class="breadcrumbs__link">Отзывы</a>
