--- a/index.html.html
+++ b/index.html.html
@@ -13,7 +13,7 @@
             <div class="welcome__pic">
                 <img src="./img/intro/logo.png" alt="">
             </div>
-            <a href="./index.html" class="welcome__btn">Перейти на сайт</a>
+            <a href="./workadium.html" class="welcome__btn">Перейти на сайт</a>
         </div>
     </div>
 </body>
