--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper wrapper__welcome">
         <div class="welcome">
             <div class="welcome__pic">
-                <img src="./img/intro/logo.png" alt="">
+                <img src="./img/intro/logo.png">
             </div>
             <a href="./workadium.html" class="welcome__btn">Перейти на сайт</a>
         </div>
