--- a/prices.html
+++ b/prices.html
@@ -69,7 +69,7 @@
                                     <a href="./workadium.html" class="breadcrumbs__link">Главная</a>
                                 </li>
                                 <li class="breadcrumbs__item breadcrumbs__item_active">
-                                    <a href="" class="breadcrumbs__link">Тарифы</a>
+                                    <div class="breadcrumbs__link">Тарифы</div>
                                 </li>
                             </ul>
                             <div class="page-name">
