--- a/comments.html
+++ b/comments.html
@@ -69,7 +69,7 @@
                                     <a href="./workadium.html" class="breadcrumbs__link">Главная</a>
                                 </li>
                                 <li class="breadcrumbs__item breadcrumbs__item_active">
-                                    <a href="" class="breadcrumbs__link">Отзывы</a>
+                                    <div class="breadcrumbs__link">Отзывы</div>
                                 </li>
                             </ul>
                     <div class="section-title section-title-comments">Отзывы</div>
