--- a/workadium.html
+++ b/workadium.html
@@ -19,7 +19,7 @@
                     </div>
                     <div class="header__right">
                         <div class="contacts">
-                            <a href=""+78000039210"" class="phone"> 8 (800) 00-392-10</a>
+                            <a href="+78000039210" class="phone"> 8 (800) 00-392-10</a>
                                 <div class="contacts__elem">
                                    <a href="#" class="contacts__schedule">График работы</a>
                                     <div class="contacts__dropdown">
